# server

./: '  .azure-pipelines.yml  .bzrignore  .clang-format  .dockerignore  .gitattributes  .gitignore  .gitignore.bak  .gitlab-ci.yml  .gitmodules  .travis-skip-tests  .travis.compiler.sh  .travis.yml  3rdparty_info.yaml  7850.patch  BUILD-CMAKE  CHANGES_AIX  CMakeLists.txt  CODING_STANDARDS.md  COMMUNITY_CONTRIBUTIONS.md  CONTRIBUTING.md  COPYING.thirdparty  CREDITS  Email  GOVERNANCE.md  INSTALL-SOURCE  INSTALL-WIN-SOURCE  KNOWN_BUGS.txt  LICENSE  README  README.md  README.me.bak  SECURITY.md  THIRDPARTY  TODO  VERSION  a  appveyor.yml  bench_isolated.cpp  build_mariadb.sh  (+26 more)
client/: CMakeLists.txt  async_example.c  cli_utils.cc  cli_utils.h  client_metadata.h  client_priv.h  completion_hash.cc  completion_hash.h  connection_pool.cc  connection_pool.h  credmgr-opt.h  credmgr-var.h  credmgr.cc  credmgr.h  echo.c  import_util.cc  import_util.h  mariadb-conv.cc  my_readline.h  myls.cc  mysql-conv.cc  mysql.cc  mysql_plugin.c  mysql_upgrade.c  mysqladmin.cc  mysqlbinlog-engine.cc  mysqlbinlog-engine.h  mysqlbinlog.cc  mysqlbinlog.h  mysqlbinlog_python.cc  mysqlbinlog_python.h  mysqlcheck.c  mysqldump.c  mysqldump.cc  mysqlimport.c  mysqlimport.cc  mysqlshow.c  mysqlslap.c  mysqltest.cc  readline.cc  (+2 more)
extra/: CMakeLists.txt  charset2html.c  comp_err.c  database_show.cc  frm_parser.cc  generate_option_list.cc  innochecksum.c  innochecksum.cc  mariadb_frm.cc  mariadb_migrate_config_file.c  mariadb_upgrade_config_file.c  mariadbd_options.h  my_convert.c  my_print_defaults.c  mysql_waitpid.c  mysqld_safe_helper.c  perror.c  replace.c  resolve_stack_dump.c  resolveip.c
include/: CMakeLists.txt  aligned.h  aria_backup.h  assume_aligned.h  base64.h  big_endian.h  btr0sea.ic  buf0buf.h  buf0types.h  bufcursor.h  byte_order_generic.h  byte_order_generic_x86.h  byte_order_generic_x86_64.h  client_connect.h  common-cli-longopts.h  common-cli-vars.h  crypt_genhash_impl.h  decimal.h  dict0dict.h  dict0dict.ic  dict0mem.h  errmsg.h  ft_global.h  ha_prototypes.h  handler_binlog_reader.h  handler_ername.h  hash.h  heap.h  ilist.h  intrusive_list.h  json_lib.h  keycache.h  keyfile.h  lf.h  little_endian.h  log0log.h  log0log.ic  m_ctype.h  m_string.h  ma_dyncol.h  (+125 more)
libmariadb/: CMakeLists.txt
libmysqld/: CMakeLists.txt  Makefile.am  client_settings.h  emb_qcache.cc  emb_qcache.h  embedded_priv.h  lib_sql.cc  libmysql.c  libmysqld.c
man/: CMakeLists.txt  aria_chk.1  aria_dump_log.1  aria_ftdump.1  aria_pack.1  aria_read_log.1  aria_s3_copy.1  comp_err.1  galera_new_cluster.1  galera_recovery.1  innochecksum.1  make_win_bin_dist.1  mariabackup.1  mariadb-access.1  mariadb-admin.1  mariadb-backup.1  mariadb-binlog.1  mariadb-check.1  mariadb-client-test-embedded.1  mariadb-client-test.1  mariadb-conv.1  mariadb-convert-table-format.1  mariadb-dump.1  mariadb-dumpslow.1  mariadb-embedded.1  mariadb-find-rows.1  mariadb-fix-extensions.1  mariadb-hotcopy.1  mariadb-import.1  mariadb-install-db.1  mariadb-plugin.1  mariadb-secure-installation.1  mariadb-service-convert.1  mariadb-setpermission.1  mariadb-show.1  mariadb-slap.1  mariadb-test-embedded.1  mariadb-test.1  mariadb-tzinfo-to-sql.1  mariadb-upgrade.1  (+69 more)
mysys/: CMakeLists.txt  ChangeLog  array.c  base64.c  charset-def.c  charset.c  checksum.c  crc32ieee.cc  default.c  errors.c  file_logger.c  file_logger.cc  get_password.c  guess_malloc_library.c  hash.c  hash.cc  keyfile.c  lf_alloc-pin.c  lf_dynarray.c  lf_hash.c  lf_hash.cc  list.c  ma_dyncol.c  md5.c  md5.c.THIS  mf_arr_appstr.c  mf_cache.c  mf_dirname.c  mf_fn_ext.c  mf_format.c  mf_getdate.c  mf_iocache.c  mf_iocache2.c  mf_keycache.c  mf_keycaches.c  mf_loadpath.c  mf_pack.c  mf_path.c  mf_qsort.c  mf_qsort2.c  (+129 more)
mysys_ssl/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  crypt_genhash_impl.cc  my_aes.cc  my_crypt.cc  my_crypt_key_management.cc  my_crypt_key_management_impl.cc  my_md5.cc  my_rnd.cc  my_sha.ic  my_sha.inl  my_sha1.cc  my_sha224.cc  my_sha256.cc  my_sha384.cc  my_sha512.cc  openssl.c  yassl.cc
pcre/: CMakeLists.txt  ChangeLog  Makefile.in  RunGrepTest  RunTest  aclocal.m4  config-cmake.h.in  config.h  config.h.generic  configure  configure.ac  pcre.h.in  pcre_compile.c  pcre_dfa_exec.c  pcre_exec.c  pcre_globals.c  pcre_grep_test.sh  pcre_internal.h  pcre_jit_compile.c  pcre_jit_test.c  pcre_printint.c  pcre_study.c  pcre_test.bat  pcre_test.sh  pcregrep.c  pcreposix.c  pcreposix.h  pcretest.c  perltest.pl
rust/: .clippy.toml  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile-old  README.md  cmake_helper.py  run.sh
scripts/: CMakeLists.txt  comp_sql.c  convert-debug-for-diff.sh  fill_help_tables.sql  galera_new_cluster.sh  galera_recovery.sh  gen_jit_mir_header.sh  generate_option_list.pl  make_binary_distribution.sh  make_win_bin_dist  maria_add_gis_sp.sql  maria_add_gis_sp.sql.in  maria_add_gis_sp_bootstrap.sql  maria_def_system_tables.sql  maria_spatial_tables.sql  maria_spatial_views.sql  mariadb-post-thaw.sh  mariadb-pre-freeze.sh  mariadb-service-convert  mariadb-socket-convert  mariadb_create_catalog_dbs.sql  mariadb_performance_tables.sql  mariadb_system_tables.sql  mariadb_system_tables_data.sql  mariadb_system_tables_fix.sql  mariadb_test_data_timezone.sql  mariadb_test_db.sql  msql2mysql.sh  mysql_config.pl  mysql_config.pl.in  mysql_config.sh  mysql_convert_table_format.sh  mysql_find_rows.sh  mysql_fix_extensions 2  mysql_fix_extensions.sh  mysql_install_db.pl.in  mysql_install_db.sh  mysql_performance_tables.sql  mysql_secure_installation.pl.in  mysql_secure_installation.sh  (+33 more)
sql/: CMakeLists.txt  Makefile.am  (+730 more)
sql-bench/: CMakeLists.txt  README  as3ap.sh  bench-count-distinct.sh  bench-init.pl.sh  compare-results.sh  copy-db.sh  crash-me.sh  example  graph-compare-results.sh  innotest1a.sh  innotest1b.sh  innotest2a.sh  innotest2b.sh  run-all-tests.sh  server-cfg.sh  test-ATIS.sh  test-alter-table.sh  test-big-tables.sh  test-connect.sh  test-create.sh  test-insert.sh  test-select.sh  test-table-elimination.sh  test-transactions.sh  test-wisconsin.sh
(+36602 files in other folders)
